# MS-UserService

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Readme.md  Rocket.toml  docker-compose.dev.yml  docker-compose.yml  pom.xml  up.sql
.openapi-generator/: FILES
api/: openapi.yaml
codegen/: openapi.yaml
data/: users.json
migrations/2021-08-07-075352_create_users/: down.sql  up.sql
resources/: db_update_0.sql
src/: controllers.rs  database_update.rs  db.rs  error.rs  main.rs  models.rs  mongo_db.rs  postgres_db.rs  rabbit.rs  repository.rs  routes.rs  schema.rs  user_repository.rs
src/main/java/thm/mic/ser/user_service/: UserServiceApplication.java
src/main/java/thm/mic/ser/user_service/component/: JWTAuthenticationFilter.java  JWTAuthorizationFilter.java
src/main/java/thm/mic/ser/user_service/config/: AuthenticationConfigConstants.java  RabbitConfiguration.java  SecurityConfiguration.java  WebConfiguration.java
src/main/java/thm/mic/ser/user_service/controller/: AppUserController.java  LoginController.java
src/main/java/thm/mic/ser/user_service/dto/: AppUser.java  LoginCredentials.java  Passport.java  UserCreatedMessage.java  UserDeletedMessage.java  UserRegistrationRequest.java
src/main/java/thm/mic/ser/user_service/repository/: AppUserRepository.java
src/main/java/thm/mic/ser/user_service/service/: AppUserService.java  AuthenticationDetailService.java  MessagingService.java
src/main/resources/: application.local.properties  application.properties  bealdung-realm.json
src/test/java/thm/mic/ser/user_service/: UserServiceApplicationTests.java
