[package]
name = "user-service"
version = "0.1.0"
authors = ["Soockee <gamingsockee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "0.2.0", features = ["full"]}
serde_json = "1.0"
warp = "0.2.0"
mongodb = "1.0.0"
thiserror = "1.0"
futures = "0.3.4"
reqwest = { version = "0.10", features = ["json"] }
log = "0.4.14"
simple_logger = "1.11.0"
