[package]
name = "user-service"
version = "0.1.0"
authors = ["Soockee <gamingsockee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
postgres = "0.17.5"
rocket = "0.5.0-rc.1"
tokio = { version = "0.2.0"}
serde = "1.0.127"
warp = "0.2.0"
thiserror = "1.0"
futures = "0.3.4"
postgres-types = "0.2.1"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]